spacing fixes

--- a/src/sass/global.scss
+++ b/src/sass/global.scss
@@ -11,7 +11,11 @@
 }
 
 .pl-15 {
-  padding: 15;
+  padding: 15px;
+}
+
+.p-heading {
+  padding: 50px 15px;
 }
 
 .hidden {
