--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -54,6 +54,10 @@ blockquote, h4 {
     font-weight: 300;
 }
 
+blockquote {
+    margin-bottom: 20px;
+}
+
 button {
     background-color: transparent;
     width: 40px;
@@ -64,6 +68,7 @@ button {
     justify-content: center;
     border: 0;
     outline: none;
+    margin: 10px 0;
 }
 
 button .line {
@@ -79,10 +84,12 @@ button .line:last-child {
 }
 
 .button {
+    display: inline-block;
     border: 1px solid var(--primary);
     text-transform: uppercase;
     font-weight: bold;
-    padding: 10px 15px;
+    padding: 10px 25px;
+    margin: 10px 0;
 }
 
 
@@ -200,6 +207,12 @@ header {
     }
 }
 
+.img-crop {
+    width: 100%;
+    max-height: 400px;
+    overflow: hidden;
+}
+
 #hamburger {
     position: relative;
     z-index: 2;
@@ -237,3 +250,4 @@ footer {
         }
     }
 }
+
